# mcp-manager

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
src/: cleanup.ts  confirm.ts  constants.ts  dom.ts  icons.ts  ipc.ts  main.ts  modal.ts  notify.ts  presets.ts  styles.css  switch.ts  toast.ts  transport.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assistant.rs  claude_cli.rs  commands.rs  config_read.rs  introspect.rs  lib.rs  logview.rs  main.rs  mask.rs  metrics.rs  models.rs  parse.rs  preflight.rs  registry.rs  settings.rs  snapshot.rs  stash.rs  toggles.rs
src/views/: assistant.ts  backups.ts  conflictDialog.ts  logView.ts  playground.ts  registry.ts  serverDetail.ts  serverForm.ts  serverList.ts  serverPicker.ts  settings.ts  sidebar.ts
