[package]
name = "mcp-manager"
version = "0.2.0"
description = "Verwaltung lokaler MCP-Server für Claude Code"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mcp_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
wait-timeout = "0.2"
libc = "0.2"
# Synchroner HTTP-Client für die HTTP/SSE-Introspektion (Feature 06). Bewusst
# ureq (klein, blockierend, rustls) statt reqwest/tokio – passt zum bestehenden
# blockierenden Thread-/Channel-Modell von introspect.rs.
ureq = "2"
# Desktop-Benachrichtigungen bei Statusverschlechterung (Feature 09).
tauri-plugin-notification = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
